# ifrac

./: CHANGES.txt  INSTALL  LICENSE  LICENSE.OLD  Makefile.in  README  VERSION  aclocal.m4  configure  configure.in  hypoth_bw_xpm.c  ifr.h  ifr_ai.c  ifr_autoconf.h.in  ifr_board.c  ifr_cfont.c  ifr_cfont.h  ifr_common.c  ifr_common.h  ifr_config.c  ifr_draw.c  ifr_extra.c  ifr_game.c  ifr_graph_common.h  ifr_help_xbm.c  ifr_hiscores.c  ifr_image.c  ifr_interface.c  ifr_intro.c  ifr_joystick.c  ifr_main.c  ifr_pixmap.c  ifr_pixmap.h  ifr_player.c  ifr_sbuttons.c  ifr_sgraph.c  ifr_skbd.c  ifr_skeys.c  ifr_smouse.c  ifr_sound.c  (+25 more)
